--- a/templates/base.html
+++ b/templates/base.html
@@ -11,7 +11,8 @@
   <!-- CSS only -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
-  <link rel="stylesheet" href="{% static 'css/style.css' %}">
+  {% block css %}
+  <link rel="stylesheet" href="{% static 'css/style.css' %}">{% endblock css %}
 
 </head>
 
@@ -21,7 +22,8 @@
       <div class="header_main">
         <div class="nav_start">
           <a class="main_logo" alt="오늘의집 로고" href="#">
-            오 늘 의 집
+            <img class="logo" src="{% static 'img/logo3.png' %}" alt="오늘의집 홈" width="100" height="30"
+              viewBox="0 0 74 30">
           </a>
         </div>
         <!-- <div class="nav_left"> -->
@@ -43,11 +45,13 @@
         <!-- </div> -->
         <div class="nav_search">
           <form class="search_form">
-            <input class="header_input" placeholder="스토어 검색" />
+            <input class="header_input p-3" placeholder="스토어 검색" />
           </form>
         </div>
-        <div><span class="nmc">로그인</span></div>
-        <div><span class="nmc">회원가입</span></div>
+        <div><a class="text-body text-decoration-none" href="{% url 'accounts:signup' %} "><span
+              class="nmc">로그인</span></a></div>
+        <div><a class="text-body text-decoration-none" href="{% url 'accounts:signup' %} "><span
+              class="nmc">회원가입</span></a></div>
         <div><span class="nmc">고객센터</span></div>
 
       </div>
