feat : accounts/follow

--- a/accounts/templates/accounts/detail.html
+++ b/accounts/templates/accounts/detail.html
@@ -28,7 +28,7 @@
     {% if person.username == user.username %}
     {% else %}
     <div>
-      <form action="{% url 'accounts:follow' %}" method='POST'>
+      <form action="{% url 'accounts:follow' user.pk %}" method='POST'>
         {% csrf_token %}
         {% if user in person.followers.all %}
         <input type="submit" value='팔로우 취소'>
