--- a/accounts/templates/accounts/detail.html
+++ b/accounts/templates/accounts/detail.html
@@ -12,15 +12,15 @@
         <div class="row">
           <div class="col d-flex flex-column align-items-center">
             <p class="mb-1">팔로워</p>
-            <p>{{ person.followings.all|length }}</p>
+            <p>{{ person.followers.all.count }}</p>
           </div>
           <div class="col d-flex flex-column align-items-center border-start">
             <p class="mb-1">팔로잉</p>
-            <p>{{ person.followings.all|length }}</p>
+            <p>{{ person.followings.all.count }}</p>
           </div>
           <div class="col d-flex flex-column align-items-center border-start">
             <p class="mb-1">리뷰</p>
-            <p>{{ person.followings.all|length }}</p>
+            <p>{{ person.followers.all.count }}</p>
           </div>
         </div>
       </div>
@@ -28,7 +28,7 @@
     {% if person.username == user.username %}
     {% else %}
     <div>
-      <form action="{% url 'accounts:follow' user.pk %}" method='POST'>
+      <form action="{% url 'accounts:follow' user.username %}" method='POST'>
         {% csrf_token %}
         {% if user in person.followers.all %}
         <input type="submit" value='팔로우 취소'>
