--- a/accounts/templates/accounts/detail.html
+++ b/accounts/templates/accounts/detail.html
@@ -3,42 +3,102 @@
 {% load django_bootstrap5 %}
 
 {% block content %}
-  <div class="section-grid mt-5 p-5">
 
-    <div class="profile">
-      <div class="p-4 mt-2 mb-5 contentcard" style="border-radius: 15px; ">
+<body style="background-color: rgb(249, 249, 249)">
+  <div class="d-flex justify-content-center align-items-center" style="height:250px; background-color:white">
+    <div class="profile" style="min-width: 300px; max-width: 400px">
+      <div class="px-4 py-3 contentcard" style="border-radius: 15px; ">
+        <div class="" style="background-color: white;">
+          <h3 class="mx-3" style="font-size: 24px;font-weight: 800; color: black">{{ person.username }}</h3>
+        </div>
         <div class="">
-          <h2 class="mx-3">{{ person.username }}</h2>
           <div class="row">
-            <div class="col d-flex flex-column align-items-center">
-              <p class="mb-1">팔로워</p>
-              <p>{{ person.followers.count }}</p>
+            <div class="col d-flex flex-column align-items-center" style="height: 45px;">
+              <p class=" mb-1" style="font-size: 13px; color: rgb(115, 115, 115)">팔로워</p>
+              <p class="text-black fw-bold" style="font-size: 16px;">{{ person.followers.count }}</p>
             </div>
-            <div class="col d-flex flex-column align-items-center border-start">
-              <p class="mb-1">팔로잉</p>
-              <p>{{ person.followings.count }}</p>
+            <div class="col d-flex flex-column align-items-center border-start" style="height: 45px;">
+              <p class="mb-1" style="font-size: 13px; color: rgb(115, 115, 115)">팔로잉</p>
+              <p class="text-black fw-bold" style="font-size: 16px;">{{ person.followings.count }}</p>
             </div>
-            <div class="col d-flex flex-column align-items-center border-start">
-              <p class="mb-1">리뷰</p>
-              <p>{{ person.followings.all.count }}</p>
+            <div class="col d-flex flex-column align-items-center border-start" style="height: 45px;">
+              <p class="mb-1" style="font-size: 13px; color: rgb(115, 115, 115)">리뷰</p>
+              <p class="text-black fw-bold" style="font-size: 16px;">{{ person.followers.count }}</p>
             </div>
           </div>
         </div>
       </div>
-      {% if person.username == user.username %}
-      {% else %}
-        <div>
+      <div>
+        <div class="px-4">
+          {% if person.username == user.username %}
+          <a href="{% url 'accounts:edit' %}"><input class="form-control btn text-white"
+              style="background-color: rgb(60, 213, 255); box-shadow:0 2px 5px 0 rgb(0 107 88 / 5%); border-radius: 8px;"
+              type="submit" value='프로필 편집'></a>
+          {% else %}
           <form action="{% url 'accounts:follow' person.pk %}" method='POST'>
             {% csrf_token %}
             {% if user in person.followers.all %}
-              <input type="submit" value='팔로우 취소'>
+            <input class="form-control btn text-white"
+              style="background-color: rgb(60, 213, 255); box-shadow:0 2px 5px 0 rgb(0 107 88 / 5%); border-radius: 8px;"
+              type="submit" value='팔로우 취소'>
             {% else %}
-              <input type="submit" value='팔로우'>
+            <input class="form-control btn text-white"
+              style="background-color: rgb(60, 213, 255); box-shadow:0 2px 5px 0 rgb(0 107 88 / 5%); border-radius: 8px;"
+              type="submit" value='팔로우'>
             {% endif %}
           </form>
+          {% endif %}
         </div>
-      {% endif %}
+      </div>
     </div>
   </div>
+  <div class="d-flex justify-content-center mt-3">
+    <div class="row p-3 d-flex" style="width:745px; background-color:white">
+      <div class="card m-2 col-lg-3" style="width: 221px;">
+        <img src="..." class="card-img-top" alt="...">
+        <div class="card-body">
+          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
+            content.</p>
+        </div>
+      </div>
+      <div class="card m-2 col-lg-3" style="width: 221px;">
+        <img src="..." class="card-img-top" alt="...">
+        <div class="card-body">
+          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
+            content.</p>
+        </div>
+      </div>
+      <div class="card m-2 col-lg-3" style="width: 221px;">
+        <img src="..." class="card-img-top" alt="...">
+        <div class="card-body">
+          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
+            content.</p>
+        </div>
+      </div>
+      <div class="card m-2" style="width: 221px;">
+        <img src="..." class="card-img-top" alt="...">
+        <div class="card-body">
+          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
+            content.</p>
+        </div>
+      </div>
+      <div class="card m-2" style="width: 221px;">
+        <img src="..." class="card-img-top" alt="...">
+        <div class="card-body">
+          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
+            content.</p>
+        </div>
+      </div>
+      <div class="card m-2" style="width: 221px;">
+        <img src="..." class="card-img-top" alt="...">
+        <div class="card-body">
+          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
+            content.</p>
+        </div>
+      </div>
+    </div>
+  </div>
+
+</body>
 
 {% endblock %}
