--- a/static/css/style.css
+++ b/static/css/style.css
@@ -59,3 +59,26 @@
   display: grid;
   grid-template-columns: 25fr 50fr 25fr;
 }
+
+.user-wrap {
+  width: 100%;
+  margin: 10px auto;
+  position: relative;
+  background-image: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.5)),
+    url("https://mblogthumb-phinf.pstatic.net/20151217_196/tamanoa_14503391844435U1wV_JPEG/%C5%FC%C5%FC%C0%CC_1.jpg?type=w2");
+}
+
+.user-wrap img {
+  width: 100%;
+  vertical-align: middle;
+}
+
+.user-text {
+  position: absolute;
+  bottom: 5px;
+  left: 20px;
+  width: 100%;
+  font: size 36px;
+  font-family: 'card';
+  text-align: conter;
+}
