--- a/articles/templates/articles/form.html
+++ b/articles/templates/articles/form.html
@@ -5,13 +5,13 @@
 <link rel="stylesheet" href="{% static 'css/style.css' %}">
 {% endblock %}
 
-{% block body %}
+{% block content %}
 <!-- 확인된 URL을 나타내는 ResolverMatch 인스턴스입니다. 이 속성은 URL이 해결된 후에만 설정되며, URL이 해결되기 전에 실행되는 미들웨어에서는 사용할 수 없지만 모든 보기에서 사용할 수
 있습니다(process_view()에서 사용할 수 있습니다). -->
 
-<div class="container text-white">
+<div class="container">
     {% if request.resolver_match.url_name == 'create' %}
-    <h1 class="my-3 text-center"> </h1>
+    <h1 class="my-3 text-center">인테리어 후기 작성</h1>
     {% else %}
     <h1 class="my-3 text-center"></h1>
     {% endif %}
@@ -19,8 +19,9 @@
     <form action="" method="POST" enctype="multipart/form-data">
         {% csrf_token %}
         {% bootstrap_form article_form %}
-        <div class="d-grid gap-2">
-            {% bootstrap_button button_type="submit" content="OK" %}
+        <div class="d-flex justify-content-end">
+            <input type="submit" class="btn-sm btn py-2 fw-bold" style="background-color: #33c4f0; color: white"
+            value="작성완료">
         </div>
     </form>
 </div>
