--- a/articles/templates/articles/index.html
+++ b/articles/templates/articles/index.html
@@ -26,21 +26,46 @@
         </div>
     </div>
     <div>
+        {% for article in articles %}
         <div class="user-wrap" style="width: 100%; height: 300px;">
             <div class="user-image">
             </div>
             <div class="user-text">
-                {% for article in articles %}
                 {% if article.review_image %}
                 <!-- title -->
-                <a href="{% url 'articles:detail' articles.pk %}"><span class="fs-2 fw-bold text-white">안녕?</span></a>
+                <a href="{% url 'articles:detail' article.pk %}"><span
+                        class="fs-2 fw-bold text-white">{{article.title}}</span></a>
                 <!-- username/ create_at -->
-                <p class="fw-bold text-white">김나형 2222-22-22</p>
+                <p class="fw-bold text-white">{{ article.created_at }}</p>
+                {% else %}
+                <a href="{% url 'articles:detail' article.pk %}"><span
+                        class="fs-2 fw-bold text-white">{{article.title}}</span></a>
+                <!-- username/ create_at -->
+                <p class="fw-bold text-white">{{ article.created_at }}</p>
                 {% endif %}
-                {% endfor %}
             </div>
         </div>
+        {% endfor %}
     </div>
-    <div>3</div>
+    <div>
+        {% for article_hit in articles_hits %}
+        <div class="d-flex justify-content-center mt-3">
+            <div class="row p-3 d-flex" style="width:100%; background-color:white">
+                <div class="card m-2 col-lg-10" style="height: 150px;">
+                    <img style="height: 100%;"
+                        src="https://mblogthumb-phinf.pstatic.net/20110926_159/levas2021_1317026319398ibHFo_JPEG/72k_02_diada890j.jpg?type=w2"
+                        class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <p class="card-text">{{article_hit.title}}
+                        </p>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+        {% endfor %}
+    </div>
 </div>
-{% endblock %}
+<script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+
+{% endblock %}`
