--- a/templates/base.html
+++ b/templates/base.html
@@ -7,12 +7,14 @@
   <!-- Required meta tags -->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <script src="https://kit.fontawesome.com/9dfbf66130.js" crossorigin="anonymous"></script>
 
   <!-- CSS only -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
   {% block css %}
-  <link rel="stylesheet" href="{% static 'css/style.css' %}">{% endblock css %}
+  <link rel="stylesheet" href="{% static 'css/style.css' %}?{% now 'U'%}">
+  {% endblock css %}
 
 </head>
 
@@ -48,43 +50,39 @@
         <div><a class="non_a nmc" href="{% url 'accounts:detail' user.username %}">{{ user.username }}님</a></div>
         <div><a class="text-body text-decoration-none" href="{% url 'accounts:signout' %} "><span
               class="nmc">로그아웃</span></a></div>
+        <!-- 후기  -->
         <div class="dropdown">
-          <div class="dropdown">
-            <button class="btn btn dropdown-toggle text-white" style="background-color:#35c5f0" type="button"
-              data-bs-toggle="dropdown" aria-expanded="false">
-              글쓰기
-            </button>
-            <ul class="dropdown-menu">
-              <li><a class="non_a" href="#"><button class="dropdown-item" type="button">인테리어 후기</button></a>
-              </li>
-              <li><a class="non_a" href="#"><button class="dropdown-item" type="button">상품 후기</button></a>
-              </li>
-            </ul>
-          </div>
-          {% else %}
-          <div><a class="text-body text-decoration-none" href="{% url 'accounts:signin' %} "><span
-                class="nmc">로그인</span></a></div>
-          <div><a class="text-body text-decoration-none" href="{% url 'accounts:signup' %} "><span
-                class="nmc">회원가입</span></a></div>
-          <div><span class="nmc">고객센터</span></div>
-          <div class="dropdown">
-            <div class="dropdown">
-              <button class="btn btn dropdown-toggle text-white" style="background-color:#35c5f0" type="button"
-                data-bs-toggle="dropdown" aria-expanded="false">
-                글쓰기
-              </button>
-              <ul class="dropdown-menu">
-                <li><a class="non_a" href="#"><button class="dropdown-item" type="button">인테리어 후기</button></a>
-                </li>
-                <li><a class="non_a" href="#"><button class="dropdown-item" type="button">상품 후기</button></a>
-                </li>
-              </ul>
-            </div>
-            {% endif %}
-          </div>
+          <button class="btn btn dropdown-toggle text-white" style="background-color:#35c5f0" type="button"
+            data-bs-toggle="dropdown" aria-expanded="false">
+            글쓰기
+          </button>
+          <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+            <li><a class="dropdown-item" href="{% url 'articles:create' %}">인테리어 후기</a></li>
+            <li><a class="dropdown-item" href="#">상품 후기</a></li>
+          </ul>
         </div>
+        {% else %}
+        <div><a class="text-body text-decoration-none" href="{% url 'accounts:signin' %} "><span
+              class="nmc">로그인</span></a></div>
+        <div><a class="text-body text-decoration-none" href="{% url 'accounts:signup' %} "><span
+              class="nmc">회원가입</span></a></div>
+        <div><span class="nmc">고객센터</span></div>
+        <div class="dropdown">
+          <button class="btn btn dropdown-toggle text-white" style="background-color:#35c5f0" type="button"
+            data-bs-toggle="dropdown" aria-expanded="false">
+            글쓰기
+          </button>
+          <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+            <li><a class="dropdown-item" href="{% url 'articles:create' %}">인테리어 후기</a></li>
+            <li><a class="dropdown-item" href="#">상품 후기</a></li>
+          </ul>
+        </div>
+        {% endif %}
+      </div>
   </nav>
+
   {% block content %}{% endblock %}
+
 
   <footer>
     <!-- place footer here -->
@@ -97,6 +95,9 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.min.js"
     integrity="sha384-7VPbUDkoPSGFnVtYi0QogXtr74QeVeeIs99Qfg5YCF+TidwNdjvaKZX19NZ/e6oz"
     crossorigin="anonymous"></script>
+
+
+
 </body>
 
 </html>
