--- a/static/css/style.css
+++ b/static/css/style.css
@@ -7,6 +7,23 @@
   color: #34c5f0;
 }
 
+textarea:hover,
+input:hover,
+textarea:active,
+input:active,
+textarea:focus,
+input:focus,
+button:focus,
+button:active,
+button:hover,
+label:focus,
+.btn:active,
+.btn.active {
+  outline: 0px !important;
+  -webkit-appearance: none;
+  box-shadow: none !important;
+}
+
 .header {
   position: sticky;
   top: 0px;
