--- a/articles/templates/articles/form.html
+++ b/articles/templates/articles/form.html
@@ -11,10 +11,10 @@
                 <input class="btn" style="color: #33c4f0;" type="submit" value="작성완료"></input>
             </div>
             <h2><input class="input-title form-control mb-3" style="border:0px; font-size: 1.5rem;" name="title"
-                    placeholder="제목"></h2>
+                    placeholder="제목을 입력해주세요."></h2>
             <hr>
             <textarea rows="40" cols="10" class="form-control mt-3" style="border:0px" name="content"
-                placeholder="내용"></textarea>
+                placeholder="내용을 입력해주세요."></textarea>
             <input type="file" id="image" name="image" accept="image/png, image/jpeg, image/jpg">
         </form>
     </div>
